--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
+    "type": "module",
     "scripts": {
         "dev": "tsx src/index.ts",
         "build": "tsc",
-        "start": "node dist/index.js"
+        "start": "tsx ./src/index.ts"
     },
     "keywords": [],
     "author": "",
