feat: add normalizeURL function and corresponding tests
- Implemented normalizeURL function to normalize URLs by removing hash fragments and ensuring valid URL format.
- Added unit tests for normalizeURL covering various cases including hash removal, query string preservation, and error handling for invalid URLs.
- Updated package.json to include vitest for testing.

--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "dev": "tsx src/index.ts",
         "build": "tsc",
-        "start": "tsx ./src/index.ts"
+        "start": "tsx ./src/index.ts",
+        "test": "vitest"
     },
     "keywords": [],
     "author": "",
@@ -16,6 +16,7 @@
     "devDependencies": {
         "@types/node": "^25.0.9",
         "tsx": "^4.21.0",
-        "typescript": "^5.9.3"
+        "typescript": "^5.9.3",
+        "vitest": "^4.0.17"
     }
 }
