feat: add getH1FromHTML and getFirstParagraphFromHTML functions with tests; update normalizeURL function

--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "license": "ISC",
     "packageManager": "pnpm@10.28.0",
     "devDependencies": {
+        "@types/jsdom": "^27.0.0",
         "@types/node": "^25.0.9",
         "tsx": "^4.21.0",
         "typescript": "^5.9.3",
         "vitest": "^4.0.17"
+    },
+    "dependencies": {
+        "jsdom": "^27.4.0"
     }
 }
