feat: implement ConcurrentCrawler class for concurrent page crawling; update main function to use crawlSiteAsync

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "vitest": "^4.0.17"
     },
     "dependencies": {
-        "jsdom": "^27.4.0"
+        "jsdom": "^27.4.0",
+        "p-limit": "^7.2.0"
     }
 }
